# bit-index

./: Cargo.toml  README.md
src/: bit_index.rs
tests/: bit_index_tests.rs
