[package]
edition = "2021"
name = "bit-index"
version = "0.1.0"


[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.1" }

[dev-dependencies]

[lib]
crate-type = ["cdylib", "lib"]
doctest = false
path = "src/bit_index.rs"



[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip debug info.
overflow-checks = true # Panic in the case of an overflow.